Fix grid responsiveness and gaps.

--- a/src/layout/grid.scss
+++ b/src/layout/grid.scss
@@ -1,9 +1,13 @@
 .grid {
+  @include responsive-block('mobile') {
+    grid-template-columns: 1fr;
+  }
+
+  column-gap: 2rem;
   display: grid;
-  grid-column-gap: 2rem;
-  grid-row-gap: 3rem;
   grid-template-columns: 1fr 1fr;
   list-style: none;
   margin: 0;
   padding: 0;
+  row-gap: 3rem;
 }
